--- a/src/TodoContainer.css
+++ b/src/TodoContainer.css
@@ -1,12 +1,12 @@
 .container {
     width: 50%;
-    /* min-height: 20%; */
     position:absolute;
     top: 25%;
     left: 25%;
     background-color: #333;
     border-radius: 18px;
     text-align: center;
+    padding-bottom: 100px;
 }
 
 .todo-item{
@@ -38,6 +38,18 @@
 
 .todoTitle{
     width: 100%;
+     flex: 1;
+  min-width: 0;
+  word-break: break-word;
+  /* white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis; */
+}
+
+.ellipsed {
+    white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .taskInput {
@@ -64,6 +76,23 @@
 .done{
     text-decoration-line: line-through;
     opacity: 0.6;
+}
+
+.app-footer {
+  margin-top: auto;     /* ← pushes footer to the bottom */
+  padding-top: 16px;
+  padding-bottom: 12px;
+  font-size: 0.85rem;
+  color: #777;
+  text-align: center;
+  /* border-top: 1px solid #e0e0e0; */
+}
+
+@media (max-width : 750px) {
+    .container{
+        width: 95%;
+        left:2.5%;
+    }
 }
 
 
