--- a/src/TodoContainer.css
+++ b/src/TodoContainer.css
@@ -1,20 +1,33 @@
 :root {
+    font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
+
+  color-scheme: light dark;
+  color: rgba(255, 255, 255, 0.87);
+  background-color: #242424;
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   --main-bg-color: #333;
   --main-color: #E7FE55;
   --main-icon-size: 18px;
   accent-color: #E7FE55;
 }
 
-
 .container {
     width: 50%;
-    position:absolute;
-    top: 25%;
-    left: 25%;
+    margin-block: 100px;
+    max-width: 1128px;
+    margin-inline: auto;
     background-color: var(--main-bg-color);
     border-radius: 18px;
     text-align: center;
-    padding-bottom: 100px;
+    padding-block-end: 30px;
+    
+  margin-bottom: 50px;
 }
 
 .header {
@@ -67,11 +80,38 @@
     cursor: pointer;
 }
 
+.arrow-down-icon {
+    color: var(--main-color);
+    border-radius: 50px;
+    transition: transform 0.3s;
+}
+
+.arrow-down-icon:hover {
+    cursor: pointer;
+    background-color: #777;
+}
+
+.icon-opened {
+    transform: rotate(180deg);    
+
+}
+
+.whatsnew-icon {
+  color: var(--main-color) !important; 
+  font-size: 22px;
+}
+
 .todoTitle{
     width: 100%;
      flex: 1;
   min-width: 0;
   word-break: break-word;
+  margin-right: 12px;
+  cursor: pointer;
+}
+
+.todoTitle:hover {
+    opacity: 0.85;
 }
 
 .ellipsed {
@@ -95,7 +135,6 @@
 }
 
 .addBtn {
-    /* height: 30px; */
     border-radius: 20px;
     background-color: var(--main-color);
     color: black;
@@ -107,13 +146,10 @@
 }
 
 .app-footer {
+    font-size: 0.85rem;
+    margin-top: 16px;
+    color: #777;
     width: 100%;
-  margin-top: auto;
-  position: absolute;
-  bottom: 20px;
-  padding-top: 16px;
-  font-size: 0.85rem;
-  color: #777;
   text-align: center;
 }
 
@@ -121,8 +157,6 @@
     width: 100%;
     border-radius: 18px;
     text-align: center;
-    /* position: absolute;
-    top: 50px; */
 }
 
 @media (max-width : 1200px) {
