--- a/src/TodoContainer.css
+++ b/src/TodoContainer.css
@@ -1,7 +1,7 @@
-:root {
+/* :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
-  font-weight: 400;
+  font-weight: 400;+
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
@@ -118,8 +118,6 @@
 }
 
 .taskInput {
-  /* height: 25px; */
-  /* width: 50%; */
   border-radius: 20px;
   padding: 12px;
   margin: 20px;
@@ -184,4 +182,4 @@
   .menu {
     display: block;
   }
-}
+}*/
