--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@
   /* --main-bg-color: 0, 0%, 20%; */
   --main-color: #e7fe55;
   --main-icon-size: 18px;
-  accent-color: #e7fe55;
+  accent-color: #c1df00;
 }
 
 .container {
@@ -273,7 +273,7 @@ button:focus-visible {
     --card-foreground: 0 0% 98%;
     --popover: 0 0% 3.9%;
     --popover-foreground: 0 0% 98%;
-    --primary: 0 0% 98%;
+    --primary: 68, 99%, 66%;
     --primary-foreground: 0 0% 9%;
     --secondary: 0 0% 14.9%;
     --secondary-foreground: 0 0% 98%;
@@ -281,7 +281,7 @@ button:focus-visible {
     --muted-foreground: 0 0% 63.9%;
     --accent: 0 0% 14.9%;
     --accent-foreground: 0 0% 98%;
-    --destructive: 0 62.8% 30.6%;
+    --destructive: 68, 100%, 44%;
     --destructive-foreground: 0 0% 98%;
     --border: 0 0% 14.9%;
     --input: 0 0% 14.9%;
