--- a/src/index.css
+++ b/src/index.css
@@ -242,6 +242,7 @@ button:focus-visible {
   :root {
     --background: 0 0% 100%;
     --foreground: 0 0% 3.9%;
+    --main: 68 99% 66%;
     --card: 0 0% 100%;
     --card-foreground: 0 0% 3.9%;
     --popover: 0 0% 100%;
@@ -252,7 +253,7 @@ button:focus-visible {
     --secondary-foreground: 0 0% 9%;
     --muted: 0 0% 96.1%;
     --muted-foreground: 0 0% 45.1%;
-    --accent: 0 0% 96.1%;
+    --accent: 68 99% 66%;
     --accent-foreground: 0 0% 9%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
@@ -269,6 +270,7 @@ button:focus-visible {
   .dark {
     --background: 0 0% 14%;
     --foreground: 0 0% 98%;
+    --main: 68 99% 66%;
     --card: 0 0% 3.9%;
     --card-foreground: 0 0% 98%;
     --popover: 0 0% 3.9%;
@@ -279,7 +281,7 @@ button:focus-visible {
     --secondary-foreground: 0 0% 98%;
     --muted: 0 0% 14.9%;
     --muted-foreground: 0 0% 63.9%;
-    --accent: 0 0% 14.9%;
+    --accent: 68 99% 66%;
     --accent-foreground: 0 0% 98%;
     --destructive: 68, 100%, 44%;
     --destructive-foreground: 0 0% 98%;
